--- a/src/components/CourseCard/CourseCard.css
+++ b/src/components/CourseCard/CourseCard.css
@@ -1,5 +1,5 @@
 .card {
-    width: 20%; /* Adjust the width of the card */
+    /* width: 20%; Adjust the width of the card. This is commented out because parent component sets width anyways  */
     height: 50%; /* Adjust the height of the card */
     margin: 10px;
   }
