--- a/src/components/AllClassesList/AllClassesList.css
+++ b/src/components/AllClassesList/AllClassesList.css
@@ -15,15 +15,19 @@
     border-top-right-radius: 8px;
     border-bottom: 0;
     width: 100%;
-    border: 1px solid black;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+    border-top: 1px solid black;
   }
   
   .cards-container {
     flex-grow: 1;
     overflow-y: scroll;
     height: 70vh; /* Adjusts length of cards container */
-    background-color: #f8f9fa;
-    border: 1px solid black;
+    background-color: #dedede;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
     width: 100%;
   }
   
