Progress on #7. Cards Still Squish, though.

--- a/src/components/ClassGroupComponents/AddCard.css
+++ b/src/components/ClassGroupComponents/AddCard.css
@@ -6,11 +6,11 @@
     border-radius: 10px; /* Matching the rounded corners */
     background-color: #dedede; /* Same background as the GroupComponent */
     margin: 10px; /* Adjust as needed */
-    width: 30%;
+    width: 10vh;
   }
   
   .plus-sign {
     font-size: 64px; /* Large plus sign */
-    color: lightgrey;
+    color: black;
   }
   
