dude no more shitty messages

--- a/src/components/ClassGroupComponents/GroupCard.css
+++ b/src/components/ClassGroupComponents/GroupCard.css
@@ -38,7 +38,7 @@
   .group-body {
     background-color: #dedede;
     height: 60vh; /* Fixed height */
-    overflow-y: hidden;
+    overflow-y: auto;
     overflow-x: hidden;
     border-right: 1px solid black;
     border-left: 1px solid black;
