--- a/src/pages/GeneratedSchedulesPage/GeneratedSchedulesPage.css
+++ b/src/pages/GeneratedSchedulesPage/GeneratedSchedulesPage.css
@@ -5,4 +5,20 @@
   .generated-schedules h1 {
     text-align: center;
   }
+
+  .schedule { 
+    display: flex;
+    flex-direction: row;
+  }
+
+  .classEntry {
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .class-name{
+    font-weight: bold;
+  }
   
