--- a/src/pages/GeneratedSchedulesPage/GeneratedSchedulesPage.css
+++ b/src/pages/GeneratedSchedulesPage/GeneratedSchedulesPage.css
@@ -9,6 +9,7 @@
   .schedule { 
     display: flex;
     flex-direction: row;
+    text-align: center;
   }
 
   .classEntry {
@@ -21,4 +22,16 @@
   .class-name{
     font-weight: bold;
   }
+
+  .schedule_button{
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 2%;
+    width: 10%;
+    display: inline-block;
+    /* flex-direction: column; */
+    text-align: center;
+    background-color:cadetblue;
+  }
+
   
