--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -17,21 +17,23 @@
     right: 1%;
 }
 
+
+
 .schedule_container {
     background-color:azure;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    width: 90%;
-    height: 90%;
-    transform: translate(-50%, -50%);
+    /* top: 50%;
+    left: 50%; */
+    width: 60%;
+    height: 20%;
+    /* transform: translate(-50%, -50%); */
     overflow: auto;
 }
 
 .schedule_table{
+    display: inline;
     width: 100%;
     margin-right: 5%;
-    height: 90%;
+    height: 20%;
     border-collapse: collapse;
     background-color: azure;
 }
