--- a/src/pages/GeneratedSchedulesPage/GeneratedSchedulesPage.css
+++ b/src/pages/GeneratedSchedulesPage/GeneratedSchedulesPage.css
@@ -1,37 +1,40 @@
 .generated-schedules {
-    margin: 20px;
-  }
+  margin: 10%;
+  height: 50%;
+  display: flexbox;
+
+}
+
+.outer_box{
+  display: flexbox;
+  width: 90%;
+  height: 40%;
+}
   
-  .generated-schedules h1 {
-    text-align: center;
-  }
+.generated-schedules h1 {
+  text-align: center;
+}
 
-  .schedule { 
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-  }
+.schedule { 
+  display: flexbox;
+  text-align: center;
+  justify-content: space-between;
+  padding-bottom: 5%;
+}
 
-  .classEntry {
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  }
+.classEntry {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
 
-  .class-name{
-    font-weight: bold;
-  }
+.class-name{
+  font-weight: bold;
+}
 
-  .schedule_button{
-    margin-left: 3%;
-    margin-right: 3%;
-    margin-bottom: 2%;
-    width: 10%;
-    display: inline-block;
-    /* flex-direction: column; */
-    text-align: center;
-    background-color:cadetblue;
-  }
-
-  
+.m_container{
+  width: 80%;
+  height: 40%;
+  display:flexbox;
+}
