--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.box {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  background-color: yellow;
-  grid-column-gap: 20px;
+.container {
+  display: flex;
 }
