--- a/src/components/ClassGroupComponents/GroupCard.css
+++ b/src/components/ClassGroupComponents/GroupCard.css
@@ -1,10 +1,10 @@
 .group-card {
   display: flex;
   flex-direction: column;
-  width: 30%;
+  /* width: 10%; */
   padding: 20px;
   flex: 0 0 auto;
-  margin: 0px;
+  margin-top: 8px;
 }
 
 .group-header {
@@ -39,7 +39,7 @@
 
 .group-body {
   background-color: #dedede;
-  height: 50vh; /* Fixed height */
+  height: 45vh; /* Fixed height */
   width: 30vh;
   overflow-y: auto;
   overflow-x: hidden;
