--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.container {
-  display: flex;
-}
-
 .add-text {
   font-weight: bold;
   background-color: white; /* Header background */
@@ -11,4 +7,17 @@
   padding: 10px 0; /* Add padding for better spacing */
   justify-content: center;
   align-content: center;
+}
+
+.class-count-input {
+  width: 100%;
+  padding: 0px;
+  margin-right: 0;
+  box-sizing: border-box;
+  border-radius: 8px;
+}
+
+.class-paste {
+  margin-left: 15px;
+  margin-right: 15px;
 }
