--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -18,7 +18,8 @@
 }
 
 .schedule_container {
-  background-color: azure;
+  /* background-color: azure; */
+  background-color: black;
   /* display: flex; */
   /* top: 50%;
     left: 50%; */
