--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,56 +1,60 @@
 .schedule_container {
   background-color: azure;
-  /* display: flex; */
-  /* top: 50%;
-    left: 50%; */
   width: 100%;
-  /* height: 20%; */
-  /* transform: translate(-50%, -50%); */
-  /* overflow: auto; */
+  overflow-x: auto; /* Add horizontal scroll if content overflows */
+  overflow-y: hidden; /* Hide vertical scroll */
+  white-space: nowrap; /* Prevent line breaks */
 }
 
 .schedule_table {
-  display: inline;
-  width: 10%;
-  margin-right: 5%;
-  height: 20%;
+  display: inline-block; /* Change display to inline-block */
+  width: auto; /* Set width to auto */
+  margin-right: 5px; /* Reduce right margin */
+  height: auto; /* Set height to auto */
   border-collapse: collapse;
-  background-color: rgb(214, 121, 34);
-  /* background-color: azure; */
 }
 
-.schedule_table thead {
-  position: sticky;
-  top: 0;
+.class-combo-title {
+  background-color: rgb(0, 0, 0);
+  color: white;
+  font-size: large;
+  margin-left: 10px !important;
+  padding: 10px;
+}
+
+.schedule_table th,
+.schedule_table td {
+  padding: 5px; /* Add padding */
 }
 
 .schedule_table th {
-  background-color: azure;
+  /* background-color: azure; */
+  background-color: rgb(214, 121, 34);
   font-family: "Lucida Grande";
+  font-size: 10px; /* Adjust font size */
 }
 
 .header {
-  width: 14%;
-  font-size: 10px;
+  width: auto; /* Set width to auto */
+  font-size: 12px; /* Adjust font size */
 }
 
 .time {
-  width: 8%;
+  width: auto; /* Set width to auto */
   font-family: "Lucida Sans Unicode";
-  vertical-align: text-top;
   font-size: x-small;
   border: none;
 }
 
 .day {
   font-family: "Lucida Grande";
-  flex-direction: column;
   text-align: center;
   border: 1px dotted grey;
+  white-space: normal; /* Allow normal line breaks */
 }
 
 .name {
-  font-size: small;
+  font-size: medium;
   background-color: cadetblue;
 }
 
@@ -60,7 +64,7 @@
 }
 
 .loc {
-  font-size: x-small;
+  font-size: small;
   font-weight: 700;
   background-color: cadetblue;
 }
